--- a/valentine/valentine.css
+++ b/valentine/valentine.css
@@ -1,5 +1,12 @@
-html,body{
-  height:100%
+html,body {
+    font-family: georgia, serif;
+    /*font-family: 'IM Fell English SC', serif;*/
+    /*background-color: #e4e4e4;*/
+    overscroll-behavior-y: contain;
+    background-color:white;
+    margin: 0px;
+    overflow: hidden;
+    height:100%;
 }
 
 .bg_heart {
